# telegram-signer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  tox.ini
docker/: CN.Dockerfile  Dockerfile  GHCR.Dockerfile  README.md  docker-compose.yml
telegram_signer/: __main__.py  ai_tools.py  config.py  core.py  logger.py  sign_record_store.py  utils.py
telegram_signer/_kurigram/: __init__.py  methods.py
telegram_signer/cli/: __init__.py  signer.py
tests/: conftest.py  test_cli_migrate_sign_records.py  test_core.py  test_sign_config_v2_to_v3.py  test_sign_record_store.py  test_utils.py
